Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-213

trace method implementation is missing

Agile BoardAttach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.10.0
    • 0.10.0
    • Build
    • None
    • log4cxx r600053 on Asianux 1.0

    Description

      trace method implementation is missing in logger.cpp which results in a linker error when directly using the method.

      Implementation which needs to be added:

      void Logger::trace(const std::string& msg, const log4cxx::spi::LocationInfo& location) {
      if (isEnabledFor(log4cxx::Level::getTrace()))

      { forcedLog(log4cxx::Level::getTrace(), msg, location); }

      }

      #if LOG4CXX_HAS_WCHAR_T
      void Logger::trace(const std::wstring& msg, const log4cxx::spi::LocationInfo& location) {
      if (isEnabledFor(log4cxx::Level::getTrace()))

      { forcedLog(log4cxx::Level::getTrace(), msg, location); }

      }
      #endif

      void Logger::trace(const std::string& msg) {
      if (isEnabledFor(log4cxx::Level::getTrace()))

      { forcedLog(log4cxx::Level::getTrace(), msg); }

      }

      #if LOG4CXX_HAS_WCHAR_T
      void Logger::trace(const std::wstring& msg) {
      if (isEnabledFor(log4cxx::Level::getTrace()))

      { forcedLog(log4cxx::Level::getTrace(), msg); }

      }
      #endif

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            carnold@apache.org Curt Arnold
            sugimoto Daisuke Sugimoto
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment