LOGCXX-213: trace method implementation is missing